Multiple smaller SonarLint fixes